--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -1,37 +1,34 @@
-name: Update Menu Daily
+name: Update Dental Cafe Menu
 
 on:
   schedule:
+    # Runs every day at 6:00 AM EST (11:00 AM UTC)
     - cron: '0 11 * * *'
-  
-  workflow_dispatch:
-
-permissions:
-  contents: write
+  workflow_dispatch:  # Allows you to manually trigger it too
 
 jobs:
   update-menu:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-
-    - name: Install dependencies
-      run: |
-        pip install requests
-    - name: Run Scraper
-      run: python scrape.py
-
-    - name: Commit and Push changes
-      run: |
-        git config --global user.name "Seawolf Bot"
-        git config --global user.email "bot@seawolfdine.com"
-        git add dental_cafe.json
-        git commit -m "Auto-update menu [skip ci]" || exit 0
-        git push
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      
+      - name: Install dependencies
+        run: |
+          pip install requests tzdata
+      
+      - name: Run scraper
+        run: python scrape.py
+      
+      - name: Commit and push if changed
+        run: |
+          git config --global user.name 'GitHub Actions Bot'
+          git config --global user.email 'actions@github.com'
+          git add dental_cafe.json
+          git diff --quiet && git diff --staged --quiet || (git commit -m "🍴 Update Dental Cafe menu - $(date +'%Y-%m-%d')" && git push)
